force-app/main/default/objects/Site_Survey__c/Site_Survey__c.object-meta.xml
<CustomObject>
    <label>Site Survey</label>
    <nameField>
        <label>Site Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>