force-app/main/default/objects/Site_Survey__c/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <label>Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scaffolding</fullName>
            </value>
            <value>
                <fullName>Tower</fullName>
            </value>
            <value>
                <fullName>Ladders</fullName>
            </value>
            <value>
                <fullName>Demarcation</fullName>
            </value>
            <value>
                <fullName>Mansafe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>