force-app/main/default/objects/Site_Survey__c/fields/Boarded__c.field-meta.xml
<CustomField>
    <fullName>Boarded__c</fullName>
    <label>Boarded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>