force-app/main/default/objects/Site_Survey__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>