force-app/main/default/objects/Site_Survey__c/fields/Consumer_Unit__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Unit__c</fullName>
    <label>Consumer Unit</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>