force-app/main/default/objects/Site_Survey__c/fields/Description_of_Cable_Run__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Cable_Run__c</fullName>
    <label>Description of Cable Run</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>