force-app/main/default/objects/Site_Survey__c/fields/DNO_Fuse__c.field-meta.xml
<CustomField>
    <fullName>DNO_Fuse__c</fullName>
    <label>DNO Fuse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>63 Amp Fuse(s)</fullName>
            </value>
            <value>
                <fullName>80A Fuse(s)</fullName>
            </value>
            <value>
                <fullName>100A Fuse(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>