force-app/main/default/objects/Site_Survey__c/fields/Earthing_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Earthing_Arrangement__c</fullName>
    <label>Earthing Arrangement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TN-S</fullName>
            </value>
            <value>
                <fullName>TN-C-S</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>