force-app/main/default/objects/Site_Survey__c/fields/Height_of_Gutter__c.field-meta.xml
<CustomField>
    <fullName>Height_of_Gutter__c</fullName>
    <label>Height of Gutter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>