force-app/main/default/objects/Site_Survey__c/fields/Henley_Block_Image__c.field-meta.xml
<CustomField>
    <fullName>Henley_Block_Image__c</fullName>
    <label>Henley Block Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>