force-app/main/default/objects/Site_Survey__c/fields/Henley_Blocks__c.field-meta.xml
<CustomField>
    <fullName>Henley_Blocks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Henley Blocks</label>
    <type>Checkbox</type>
</CustomField>