force-app/main/default/objects/Site_Survey__c/fields/Image_of_Incomer__c.field-meta.xml
<CustomField>
    <fullName>Image_of_Incomer__c</fullName>
    <label>Image of Incomer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>