force-app/main/default/objects/Site_Survey__c/fields/Images_of_cable_routing__c.field-meta.xml
<CustomField>
    <fullName>Images_of_cable_routing__c</fullName>
    <label>Images of Cable Routing</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>