force-app/main/default/objects/Site_Survey__c/fields/Images_of_Proposed_Equipment_Location__c.field-meta.xml
<CustomField>
    <fullName>Images_of_Proposed_Equipment_Location__c</fullName>
    <label>Images of Proposed Equipment Location</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>