force-app/main/default/objects/Site_Survey__c/fields/Incoming_Supply__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Supply__c</fullName>
    <label>Incoming Supply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Phase</fullName>
            </value>
            <value>
                <fullName>Dual Phase</fullName>
            </value>
            <value>
                <fullName>Three Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>