force-app/main/default/objects/Site_Survey__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Site Surveys</relationshipLabel>
    <relationshipName>Site_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>