force-app/main/default/objects/Site_Survey__c/fields/Length_of_Cable_Run_M__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Cable_Run_M__c</fullName>
    <label>Length of Cable Run  (M)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>