force-app/main/default/objects/Site_Survey__c/fields/Main_Switch_Rating__c.field-meta.xml
<CustomField>
    <fullName>Main_Switch_Rating__c</fullName>
    <label>Main Switch Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>