force-app/main/default/objects/Site_Survey__c/fields/MCB__c.field-meta.xml
<CustomField>
    <fullName>MCB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MCB</label>
    <type>Checkbox</type>
</CustomField>