force-app/main/default/objects/Site_Survey__c/fields/Meter_Isolator__c.field-meta.xml
<CustomField>
    <fullName>Meter_Isolator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meter Isolator</label>
    <type>Checkbox</type>
</CustomField>