force-app/main/default/objects/Site_Survey__c/fields/Meter_Tails__c.field-meta.xml
<CustomField>
    <fullName>Meter_Tails__c</fullName>
    <label>Meter Tails</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>16mm</fullName>
            </value>
            <value>
                <fullName>25mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>