force-app/main/default/objects/Site_Survey__c/fields/No_of_Ways__c.field-meta.xml
<CustomField>
    <fullName>No_of_Ways__c</fullName>
    <label>No of Ways</label>
    <length>255</length>
    <type>Text</type>
</CustomField>