force-app/main/default/objects/Site_Survey__c/fields/Notes1__c.field-meta.xml
<CustomField>
    <fullName>Notes1__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>