force-app/main/default/objects/Site_Survey__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Any notes on the installation here – any issues etc.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>