force-app/main/default/objects/Site_Survey__c/fields/Pitch__c.field-meta.xml
<CustomField>
    <fullName>Pitch__c</fullName>
    <label>Pitch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>