force-app/main/default/objects/Site_Survey__c/fields/PMT_Project__c.field-meta.xml
<CustomField>
    <fullName>PMT_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PMT Project</label>
    <referenceTo>inov8__PMT_Project__c</referenceTo>
    <relationshipLabel>Site Surveys</relationshipLabel>
    <relationshipName>Site_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>