force-app/main/default/objects/Site_Survey__c/fields/Proposed_cable_entry_route__c.field-meta.xml
<CustomField>
    <fullName>Proposed_cable_entry_route__c</fullName>
    <label>Proposed cable entry route</label>
    <length>255</length>
    <type>Text</type>
</CustomField>