force-app/main/default/objects/Site_Survey__c/fields/Proposed_Fitting__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Fitting__c</fullName>
    <label>Proposed Fitting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Roof</fullName>
            </value>
            <value>
                <fullName>Hook and Rail</fullName>
            </value>
            <value>
                <fullName>Slate</fullName>
            </value>
            <value>
                <fullName>Trapazoidal</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>