force-app/main/default/objects/Site_Survey__c/fields/Proposed_Tech_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Tech_Type__c</fullName>
    <label>Proposed Tech Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>EV Charging</fullName>
            </value>
            <value>
                <fullName>Battery Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>