force-app/main/default/objects/Site_Survey__c/fields/RCBO__c.field-meta.xml
<CustomField>
    <fullName>RCBO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RCBO</label>
    <type>Checkbox</type>
</CustomField>