force-app/main/default/objects/Site_Survey__c/fields/RCD__c.field-meta.xml
<CustomField>
    <fullName>RCD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RCD</label>
    <type>Checkbox</type>
</CustomField>