force-app/main/default/objects/Site_Survey__c/fields/Roof_Material__c.field-meta.xml
<CustomField>
    <fullName>Roof_Material__c</fullName>
    <label>Roof Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Slate</fullName>
            </value>
            <value>
                <fullName>Metal Trapazoidal</fullName>
            </value>
            <value>
                <fullName>Metal Standing Seam</fullName>
            </value>
            <value>
                <fullName>Fibre Cement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>