force-app/main/default/objects/Site_Survey__c/fields/Roof_Type__c.field-meta.xml
<CustomField>
    <fullName>Roof_Type__c</fullName>
    <label>Roof Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Pitched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>