force-app/main/default/objects/Site_Survey__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Site Surveys</relationshipLabel>
    <relationshipName>Site_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>