force-app/main/default/objects/Site_Survey__c/fields/Site_Address_Country_Territory__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_Country_Territory__c</fullName>
    <label>Site Address (Country/Territory)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>