force-app/main/default/objects/Site_Survey__c/fields/Site_Address_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_State_Province__c</fullName>
    <label>Site Address (State/Province)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>