force-app/main/default/objects/Site_Survey__c/fields/Site_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_Street__c</fullName>
    <label>Site Address (Street)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>