force-app/main/default/objects/Site_Survey__c/fields/Site_Address_ZIP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_ZIP_Postal_Code__c</fullName>
    <label>Site Address (ZIP/Postal Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>