force-app/main/default/objects/Site_Survey__c/fields/Structural_Roof_Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>Structural_Roof_Form_Completed__c</fullName>
    <label>Structural Roof Form Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>