force-app/main/default/objects/Site_Survey__c/fields/Surge__c.field-meta.xml
<CustomField>
    <fullName>Surge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surge</label>
    <type>Checkbox</type>
</CustomField>