force-app/main/default/objects/Site_Survey__c/fields/Tile__c.field-meta.xml
<CustomField>
    <fullName>Tile__c</fullName>
    <inlineHelpText>If You Select Tile in Roof Material these are mandatory values for Tile</inlineHelpText>
    <label>Tile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Roman</fullName>
            </value>
            <value>
                <fullName>Double Roman</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>