force-app/main/default/objects/Site_Survey__c/fields/Type_of_Fixing_Req__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Fixing_Req__c</fullName>
    <label>Type of Fixing Req.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>