force-app/main/default/objects/Site_Survey__c/recordTypes/Roof_Survey.recordType-meta.xml
<RecordType>
    <fullName>Roof_Survey</fullName>
    <active>true</active>
    <label>Roof Survey</label>
</RecordType>