force-app/main/default/objects/Site_Survey__c/recordTypes/Site_Survey.recordType-meta.xml
<RecordType>
    <fullName>Site_Survey</fullName>
    <active>true</active>
    <label>Site Survey</label>
</RecordType>